[package]
name = "roguelike"
version = "0.1.0"
authors = ["James McNeill <mcneja@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
multiarray = { version = "0.1.3" }
rand = { version = "0.8.0", default-features = false }
rand_pcg = "0.3.0"
vector2d = { version = "2.2.0" }

[profile.release]
lto = true
opt-level = 's'
